# Upflame-AGO

./: pyproject.toml
agent/: agent_runtime.py  executor.py  planner.py
configs/: ds_config_zero3.json  scaling.yaml
docs/: colab_usage_guide.md  evaluation.md
inference/: run_inference.py  server.py
memory/: episodic_memory.py  vector_memory.py
model/: __init__.py  architecture.py  attention.py  config.py  infini_attention.py  memory_layer.py  moe.py  moe_layer.py  policy_head.py  transformer.py  unified_attention.py  unified_config.py  unified_transformer.py
notebooks/: generate_notebook.py  upflame_progressive_scaling_100M_to_2B.ipynb
orchestrator/: competition_manager.py  goal_manager.py  orchestrator.py  team_builder.py
tokenizer/: tokenizer.py  train_tokenizer.py
training/: plot_scaling.py  pretrain.py  train_small.py
training/rl/: ppo.py
world_model/: state_model.py
